WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182270
Flaky Test: imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-dataurl-worker.html
https://bugs.webkit.org/show_bug.cgi?id=182270
Summary
Flaky Test: imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-da...
WebKit Commit Bot
Reported
2018-01-29 17:21:37 PST
This is an automatically generated bug from the commit-queue. imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-dataurl-worker.html has been flaky on the commit-queue. imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-dataurl-worker.html was authored by
youennf@gmail.com
.
https://trac.webkit.org/browser/trunk/LayoutTests/imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-dataurl-worker.html
The commit-queue just saw imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-dataurl-worker.html flake (DumpRenderTree crashed) while processing
attachment 332594
[details]
on
bug 182193
. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.12.6 The bots will update this with information from each new failure. If you believe this bug to be fixed or invalid, feel free to close. The bots will re-open if the flake re-occurs. If you would like to track this test fix with another bug, please close this bug as a duplicate. The bots will follow the duplicate chain when making future comments.
Attachments
Archive of layout-test-results from webkit-cq-01
(2.21 MB, application/zip)
2018-01-29 17:21 PST
,
WebKit Commit Bot
no flags
Details
crash log
(99.12 KB, text/plain)
2018-02-07 14:12 PST
,
Alexey Proskuryakov
no flags
Details
Archive of layout-test-results from webkit-cq-01
(2.24 MB, application/zip)
2018-02-09 15:22 PST
,
WebKit Commit Bot
no flags
Details
Archive of layout-test-results from webkit-cq-01
(2.30 MB, application/zip)
2018-02-10 07:44 PST
,
WebKit Commit Bot
no flags
Details
Archive of layout-test-results from webkit-cq-01
(2.22 MB, application/zip)
2018-02-14 19:37 PST
,
WebKit Commit Bot
no flags
Details
Patch
(11.37 KB, patch)
2018-02-15 11:09 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.55 KB, patch)
2018-02-15 11:17 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(10.64 KB, patch)
2018-02-15 12:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.23 KB, patch)
2018-02-15 16:04 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2018-01-29 17:21:38 PST
Created
attachment 332608
[details]
Archive of layout-test-results from webkit-cq-01
Alexey Proskuryakov
Comment 2
2018-02-07 14:12:56 PST
Created
attachment 333312
[details]
crash log
Alexey Proskuryakov
Comment 3
2018-02-07 14:13:12 PST
***
Bug 182572
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 4
2018-02-07 14:13:19 PST
***
Bug 182562
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 5
2018-02-07 14:13:24 PST
***
Bug 182561
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2018-02-07 14:13:40 PST
***
Bug 182481
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 7
2018-02-07 14:14:10 PST
Some analysis in
bug 182481
.
WebKit Commit Bot
Comment 8
2018-02-09 15:22:38 PST
The commit-queue just saw imported/w3c/web-platform-tests/fetch/api/cors/cors-redirect-preflight.any.html flake (DumpRenderTree crashed) while processing
attachment 333518
[details]
on
bug 182651
. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 9
2018-02-09 15:22:39 PST
Created
attachment 333526
[details]
Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 10
2018-02-10 07:44:01 PST
The commit-queue just saw imported/w3c/web-platform-tests/fetch/api/redirect/redirect-to-dataurl.html flake (DumpRenderTree crashed) while processing
attachment 333556
[details]
on
bug 182662
. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 11
2018-02-10 07:44:02 PST
Created
attachment 333557
[details]
Archive of layout-test-results from webkit-cq-01
Chris Dumez
Comment 12
2018-02-14 13:24:40 PST
<
rdar://problem/36904314
>
Chris Dumez
Comment 13
2018-02-14 13:34:12 PST
Apparently a regression from
https://trac.webkit.org/changeset/224522/webkit
.
WebKit Commit Bot
Comment 14
2018-02-14 19:37:46 PST
The commit-queue just saw imported/w3c/web-platform-tests/fetch/api/redirect/redirect-mode.html flake (DumpRenderTree crashed) while processing
attachment 333866
[details]
on
bug 182817
. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.12.6
WebKit Commit Bot
Comment 15
2018-02-14 19:37:47 PST
Created
attachment 333869
[details]
Archive of layout-test-results from webkit-cq-01
Chris Dumez
Comment 16
2018-02-15 11:09:38 PST
Created
attachment 333917
[details]
Patch
Chris Dumez
Comment 17
2018-02-15 11:17:23 PST
Created
attachment 333921
[details]
Patch
Chris Dumez
Comment 18
2018-02-15 12:00:48 PST
Created
attachment 333929
[details]
Patch
Chris Dumez
Comment 19
2018-02-15 16:04:24 PST
Created
attachment 333964
[details]
Patch
Antti Koivisto
Comment 20
2018-02-15 17:07:15 PST
r=me
WebKit Commit Bot
Comment 21
2018-02-15 17:35:37 PST
Comment on
attachment 333964
[details]
Patch Clearing flags on attachment: 333964 Committed
r228545
: <
https://trac.webkit.org/changeset/228545
>
WebKit Commit Bot
Comment 22
2018-02-15 17:35:39 PST
All reviewed patches have been landed. Closing bug.
Alex Christensen
Comment 23
2018-02-16 16:10:53 PST
We should probably do the same thing to the CFURLConnection loading code for Windows.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug